Edited wiki page through web user interface.

--- a/wiki/HowDoI.wiki
+++ b/wiki/HowDoI.wiki
@@ -26,6 +26,15 @@ The majority of the images are now contained in a single sprite sheet named `com
   }}}
   # Some images still are individual files, for example, the print icon.  Those should already point to the file in the `images` folder, so you should be able to edit it, and the change should be immediately visible.
 
+=...display a specific date or date range?=
+
+There is an undocumented feature of Google Calendar that allows you to specify a date range.  Add the following variable to your query string:
+{{{
+dates=YYYYMMDD%2fYYYYMMDD
+}}}
+where YYYYMMDD represents a date as Year-Month-Day.  This is most useful when the mode is set to agenda, and you want to display future events and not just the current month's events.
+
+
 =...remove the Google logo?=
 
 Personally, I don't think you should do this, but here are the instructions anyway.
